# chess-programming

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  cleanDebug.sh  debug.sh
include/: application.h  board.h  constants.h  fen-parser.h  game.h  move-list.h  move.h  piece-list.h  piece.h  types.h
include/rendering/: board-renderer.h  game-renderer.h  menu.h  plane.h
src/: application.cpp  board.cpp  fen-parser.cpp  game.cpp  main.cpp  move-list.cpp  move.cpp  piece-list.cpp  piece.cpp
src/rendering/: board-renderer.cpp  game-renderer.cpp  menu.cpp  plane.cpp
